app/assets/stylesheets/main.css
/* ... */
.auth_topbar .dropdown-menu {
  top: 26px;
  background-color: #326092 !important;
}
.auth_topbar .sign_in_cta {
  padding-top: 4px;
  float:left;
  }
.auth_topbar a {
  font-weight: bold;
  color: #eee;
}
.auth_topbar li {
  line-height: 24px;
  color: #ddd;
}
.auth_topbar.topbar div > ul a { 
  display: inline; 
}
.auth_topbar.topbar ul.dropdown-menu a { 
  display: block; 
  color: #eee !important;
}
.auth_topbar.topbar ul.dropdown-menu a:hover { 
  background-color: #3873AF;
  background-image: none;
}
.home-page-navbar-login input {
  background-color:#FFF;
  margin-top:2px;
  margin-bottom:2px;
}
.home-page-navbar-login input[type="submit"] {
  background-color:#3895D7;
  color:#fff;
}

.home-page-navbar-login form{
  margin-top:0px;
  float:right;
}
.home-page-navbar-login  input[type=text]{
  background-color:#fff;
  height:15px;
  width:175px;
}
.home-page-navbar-login input[type=button]{
  background-color:#3491d6;
  color:#fff;
  height:25px;
}

.auth_topbar.topbar div > ul a img { 
  padding-top: 6px;
  vertical-align: top;
}

.brand_header .nav_topbar {
  top: 33px;
  position: absolute;
  z-index: inherit;
}
.brand_header .nav_topbar .fill {
  background: #ffffff; /* Old browsers */
  /* background: -moz-linear-gradient(top,  #ffffff 0%, #dddddd 100%); /* FF3.6+ */
  /* background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#dddddd)); /* Chrome,Safari4+ */
  /* background: -webkit-linear-gradient(top,  #ffffff 0%,#dddddd 100%); /* Chrome10+,Safari5.1+ */
  /* background: -o-linear-gradient(top,  #ffffff 0%,#dddddd 100%); /* Opera 11.10+ */
  /* background: -ms-linear-gradient(top,  #ffffff 0%,#dddddd 100%); /* IE10+ */
  /* background: linear-gradient(top,  #ffffff 0%,#dddddd 100%); /* W3C */
  /* filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#dddddd',GradientType=0 ); /* IE6-9 */
}
.brand_header .nav_topbar a {
  color: #3F9DE0;
  padding:15px 10px;
  font-size:14px;
  height: 45px;
  line-height:15px;
  text-shadow: 0 -0 0 rgba(0, 0, 0, 0);
}
.brand_header .nav_topbar a  span{
  color: #A8A8A8;
  display:block;
  font-size:12px;
  font-weight:normal;
}
.brand_header .nav_topbar .label {
  background-color:#FF6502;
  color:#fff;
  display:inline;
  height:10px;
  padding-top:4px;
  text-align:center;
  width:20px;
}

.brand_header .nav_topbar ul li {
  height: 65px;
  border-right:1px solid #eee;
}  
.brand_header .nav_topbar ul li:first-child{
  border-left:1px solid #eee;
}
.brand_header .topbar div > ul .active > a, .nav .active > a {
  background: #dddddd; /* Old browsers */
  background: -moz-linear-gradient(top,  #dddddd 0%, #ffffff 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#dddddd), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* IE10+ */
  background: linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dddddd', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
  color: #333;
  height: 35px;
}
.brand_header .topbar div > ul a:hover {
  background: #dddddd; /* Old browsers */
  background: -moz-linear-gradient(top,  #dddddd 0%, #ffffff 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#dddddd), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* IE10+ */
  background: linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dddddd', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
  color: #999;
  height: 35px;
  text-shadow: none;
}

.brand_header .nav_topbar img.logo {
  float: left;
  padding: 20px 25px 10px 0;
}

.brand_header .nav_topbar p.nav_desc {
  font-size: 10px;
  line-height: 5px;
  padding-top:10px;
}

#top-banner  {
  background-color:#edeae3;
  background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(237,234,227,1) 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(237,234,227,1)));
  background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(237,234,227,1) 100%);
  background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(237,234,227,1) 100%);
  background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(237,234,227,1) 100%);
  background: linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(237,234,227,1) 100%);
  border-bottom: 1px solid #C2C2C2;
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#edeae3',GradientType=0 );
  margin-bottom: 20px;
}
#top-banner  .tabs {
  margin-bottom:0;
}
#top-banner  .tabs > li > a {
  background-color: #42aaf1;
  color: #fff;
  padding: 0 30px;
  font-size: 16px;
  font-weight:bold;
  margin-right: 5px;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
}
#top-banner .tabs .active > a, #top-banner .tabs .active > a:hover {
  background-color: #fff;
  color: #1e316b;
}

#top-banner .building-relationships-container h2 {
  background: transparent url('../images/home_triangle.png') 0 5px no-repeat;
  float:left;
  font-weight:normal;
  font-size:31px;
  line-height:105px;
  padding-left:75px;
}
#top-banner .building-relationships-container span {
  font-weight:bold;
}
#top-banner .building-relationships-container ul {
  float:right;
  list-style-type:none;
  margin-top:15px;
  margin-right:45px;
}
/* ... */

